2005-11-11  Sven Panne  <sven.panne@aedion.de>

	* src/al_ext.c, src/alc/alc_context.c: Overhauled
	alcGetProcessAddress and alGetProcAddress.

	* src/al_ext.c, src/alc/alc_context.c: Overhauled alcGetEnumValue
	and alGetEnumValue.

	* doc/openal.texi: Added a tiny note about AL_BYTE_LOKI.

2005-11-10  Sven Panne  <sven.panne@aedion.de>

	* doc/openal.texi, src/al_ext.c, src/alc/alc_context.c,
	test/testcallback.c, test/testchannel.c, test/testchannel2.c,
	test/testmulticontext.c, test/testmulticontext2.c,
	test/testpitch.c, test/testpitch2.c, test/testpitch3.c,
	test/testpitch4.c, linux/test/teststartstop.c: Do not use
	AL_INVALID and ALC_INVALID, they are not in the 1.1 spec.

	* ChangeLog, include/AL/alext.h, src/al_ext.c, src/al_filter.c,
	src/al_listen.c, src/al_source.c, test/testchannel.c,
	test/testgain.c, test/testgainlinear.c, test/testmultinothread.c,
	test/testpitch.c, test/testpitch2.c, test/testpitch3.c,
	test/testpitch4.c, test/testpitchnothread.c,
	test/testpitchnothread2.c, test/testqueue.c, test/testqueue2.c,
	test/testqueue3.c, test/testtime.c: The non-standard
	AL_GAIN_LINEAR_LOKI token seems to behave exactly as the standard
	AL_GAIN, at least in the current code base. Therefore the former
	has been deprecated in the extension header and is not used
	internally anymore. Nevertheless, for legacy reasons it is still
	recognized in getters and setters.

2005-11-09  Sven Panne  <sven.panne@aedion.de>

	* src/al_buffer.c, src/al_ext.c, src/al_source.c: Removed
	AL_ILLEGAL_* tokens from implementation.

	* src/al_ext.c, src/al_ext.h: Removed AL_ENV_* tokens, they were
	unused and without any functionality.

2005-11-07  Prakash Punnoor <prakash@punnoor.de>

	* src/arch/irix/iris.c: fix missing alext.h include

2005-11-06  Prakash Punnoor <prakash@punnoor.de>

	* configure.ac, config-osx.h, src/al_siteconfig.h: cleaning-up:
	removed unused/obsolete stuff

2005-11-03  Sven Panne  <sven.panne@aedion.de>
